<resources>
    <string name="app_name">Student Bazaar</string>
    <string name="greeting_signup">WELCOME TO STUDENT BAZAAR</string>
    <string name="greeting_login">WELCOME BACK TO STUDENT BAZAAR</string>
    <string name="question_signup">Have an account? Log in below!</string>
    <string name="question_login">New here? Sign up below</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="fail_login">Wrong Username or Password</string>
    <string name="login_screen">LoginScreen</string>
    <string name="note_list_screen">NoteListScreen</string>
    <string name="note_database">noteDatabase</string>
    <string name="note_content_screen">NoteContentScreen</string>
    <string name="save_button">Save</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="userPasswdKV">com.cs407.studentBazaar.userPasswdKV</string>
    <string name="back">Back</string>
    <string name="username_format">\@%s</string>
    <string name="edit_profile_button">Edit profile</string>
    <string name="listing_display">Listing</string>
    <string name="followers_display">Followers</string>
    <string name="following_display">Following</string>
    <string name="name_edit">Name</string>
    <string name="username_edit">Username</string>
    <string name="bio_edit">Bio</string>
    <string name="search_hint">Search here</string>
    <string name="greeting_home">Welcome %1$s!</string>
    <string name="new_switch">New</string>
    <string name="nearby_switch">Nearby</string>
    <string name="pricelow_switch">Price low</string>
    <string name="pricehigh_switch">Price high</string>
    <string name="chat_title">Message</string>
    <string name="cart_title">Cart</string>
    <string name="checkout_button">Checkout</string>
    <string name="publish_title">Publish</string>
    <string name="item_title">Item name</string>
    <string name="item_price">Price</string>
    <string name="item_publish">List Item</string>
    <string name="item_label">Label:</string>
    <string name="item_condition">Condition:</string>
    <string name="item_description">Description:</string>
    <string name="home_button">Home</string>
    <string name="account_button">Account</string>
    <string name="chat_bottom_button">Chat</string>
    <string name="app_database">app_database</string>
    <string name="publish_item">Publish</string>
    <string name="listing_count">%s</string>
    <string name="followers_count">%s</string>
    <string name="following_count">%s</string>
    <string name="following">Following</string>
    // Notification
    <string name="notifications">Notifications</string>
    <string name="send_notification">Send Notification</string>
    <string name="sender_name">Sender Name</string>
    <string name="message">Message</string>
    <string name="please_allow_notification">Please allow all notifications to continue.</string>
    <string name="channel_name">Chat</string>
    <string name="channel_description">All chat messages</string>
    <string name="hide_on_lockscreen">Hide content when locked</string>
    <string name="reply">Reply</string>
    <string name="replied">Replied: %1$s (to message %2$d)</string>
    <string name="following_notify">%1$s started following you.</string>
    <string name="new_follower">New follower</string>
    // Chat
    <string name="inbox">Inbox</string>
    <string name="sent_message">This is sent message</string>
    <string name="received_message">This is received message</string>
    <!-- Placeholder texts -->
    <string name="click">Click here</string>
    <string name="follow">Follow</string>
    <string name="like">Like</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="item_view_title">View Item</string>
    <string name="add_cart_button">Add to Cart</string>
    <string name="message_seller_button">Message Seller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>